# gcrud

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  array_size.h  check-leaks.sh  colors.c  colors.h  gcrud.kdev4  gcruft2.kdev4  gcruft2.supp  main.c  util.c  util.h  whitelist.c  whitelist.h
.github/workflows/: ccpp.yml
helper/: FindGLIB2.cmake  FindLibmount.cmake
